--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-error-boundary": "1.2.5",
     "react-frame-component": "4.1.3",
     "react-highlight": "0.12.0",
-    "web-worker": "^1.0.0"
+    "web-worker": "^1.0.0",
+    "xterm": "^4.9.0"
   }
 }
