--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-frame-component": "4.1.3",
     "react-highlight": "0.12.0",
     "web-worker": "^1.0.0",
-    "xterm": "^4.9.0"
+    "xterm": "^4.9.0",
+    "xterm-addon-fit": "^0.4.0"
   }
 }
