--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[cljsfiddle](https://cljsfiddle.dev) is a code playground for [ClojureScript](https://clojurescript.org/)",
   "main": "index.js",
   "dependencies": {
+    "marked": "^1.1.1",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
