--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "elkjs": "^0.7.0",
+    "highlight.js": "^10.2.0",
     "marked": "^1.1.1",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.13.1",
