--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-error-boundary": "1.2.5",
+    "react-frame-component": "4.1.3",
+    "react-highlight": "0.12.0",
     "react-monaco-editor": "^0.40.0",
     "web-worker": "^1.0.0",
     "xterm": "^4.9.0",
