shadow-cljs + monaco

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "elkjs": "^0.7.0",
     "highlight.js": "^10.2.0",
     "marked": "^1.1.1",
-    "monaco-editor-webpack-plugin": "^1.9.0",
+    "monaco-editor": "^0.21.0",
+    "monaco-editor-webpack-plugin": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-error-boundary": "1.2.5",
