--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "xterm-addon-fit": "^0.4.0"
   },
   "devDependencies": {
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
-    "style-loader": "^1.2.1"
+    "shadow-cljs": "^2.11.4",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
