--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[cljsfiddle](https://cljsfiddle.dev) is a code playground for [ClojureScript](https://clojurescript.org/)",
   "main": "index.js",
   "dependencies": {
+    "ansi-escapes": "^4.3.1",
     "elkjs": "^0.7.0",
     "highlight.js": "^10.2.0",
     "marked": "^1.1.1",
