--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install rlwrap
+      run: sudo apt-get update -y && sudo apt-get install -y rlwrap
     - name: Download Clojure CLI tools
       run: curl -O https://download.clojure.org/install/linux-install-1.10.1.697.sh
     - name: chmod +x Clojure CLI tools
