--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Install Clojure CLI tools
       run: sudo ./linux-install-1.10.1.697.sh
     - name: Lint
-      run: ./lint.sh
+      run: ./scripts/lint.sh
