--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "ansi-escapes": "^4.3.1",
+    "ansi-styles": "^4.2.1",
     "elkjs": "^0.7.0",
     "highlight.js": "^10.2.0",
     "marked": "^1.1.1",
