--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "marked": "^1.1.1",
     "monaco-editor": "^0.21.0",
     "monaco-editor-webpack-plugin": "^2.0.0",
+    "pako": "^1.0.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-error-boundary": "1.2.5",
