--- a/package.json
+++ b/package.json
@@ -4,9 +4,26 @@
   "description": "cljspad is a code playground for ClojureScript",
   "main": "index.js",
   "dependencies": {
+    "@codemirror/autocomplete": "0.17.4",
+    "@codemirror/closebrackets": "0.17.2",
+    "@codemirror/commands": "0.17.2",
+    "@codemirror/comment": "0.17.1",
+    "@codemirror/fold": "0.17.1",
+    "@codemirror/gutter": "0.17.1",
+    "@codemirror/highlight": "0.17.1",
+    "@codemirror/history": "0.17.2",
+    "@codemirror/language": "0.17.4",
+    "@codemirror/lint": "0.17.1",
+    "@codemirror/matchbrackets": "0.17.2",
+    "@codemirror/rectangular-selection": "0.17.1",
+    "@codemirror/search": "0.17.1",
+    "@codemirror/state": "0.17.1",
+    "@codemirror/view": "0.17.6",
     "ansi-escapes": "^4.3.1",
     "ansi-styles": "^4.2.1",
     "highlight.js": "^10.2.0",
+    "lezer-clojure": "0.1.10",
+    "lezer-generator": "^0.13.2",
     "marked": "^1.1.1",
     "monaco-editor": "^0.21.0",
     "monaco-editor-webpack-plugin": "^2.0.0",
@@ -24,7 +41,7 @@
   "devDependencies": {
     "css-loader": "^4.3.0",
     "file-loader": "^6.1.0",
-    "shadow-cljs": "^2.11.4",
+    "shadow-cljs": "^2.11.14",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
