--- a/package.json
+++ b/package.json
@@ -25,26 +25,18 @@
     "lezer-clojure": "0.1.10",
     "lezer-generator": "^0.13.2",
     "marked": "^1.1.1",
-    "monaco-editor": "^0.21.0",
-    "monaco-editor-webpack-plugin": "^2.0.0",
     "pako": "^1.0.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-error-boundary": "1.2.5",
     "react-frame-component": "4.1.3",
     "react-highlight": "0.12.0",
-    "react-monaco-editor": "^0.40.0",
     "web-worker": "^1.0.0",
     "xterm": "^4.9.0",
     "xterm-addon-fit": "^0.4.0"
   },
   "devDependencies": {
-    "css-loader": "^4.3.0",
-    "file-loader": "^6.1.0",
-    "shadow-cljs": "^2.11.14",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "shadow-cljs": "^2.11.14"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
